Changes in @NEW@:
  o Code Changes:
    * Dependency checking can now be run without computing the order
      dependency

  o Bug Fixes:
    * Removed unnecessary repository accesses that were occuring while
      determining local system changes during an update. (CNY-2876)
    * "import os" within recipes now functions again. (CNY-2879)

Changes in 2.0.18:
  o Protocol Changes:
    * The addRoleMember() and getRoleMembers() calls are now exposed
      via XMLRPC. (CNY-2862)
    * Added support for package creator specific data to trove info and
      the getPackageCreatorTroves() repository call (CNY-2855)

  o Bug Fixes:
    * A rare error that occurred when an updating containing several groups
      that contained different versions of the same package has been 
      fixed. (CNY-2860)
    * Some .car format files previously caused builds to fail; this
      has been corrected. (CNY-2871)
    * Tracebacks no longer print each filename twice (bug introduced
      in Conary 2.0.16). (CNY-2872)

  o Build Changes:
    * When the configure script run by r.Configure() or r.ManualConfigure()
      fails, "command not found" messages are highlighted, and possible
      missing buildRequires based on those messages are sought in the
      repository. (CNY-2708)
    * All missing buildRequires found by noticing programs used in source
      actions, build actions, and policies are reported immediately as well
      as summarized at the end of the build, to make it clearer why each
      requirement has been suggested. (CNY-2858)
    * The r.addPatch() method now takes an optional patchName keyword
      argument, which is the name of the patch program to use to apply
      the patch. (CNY-2858)

Changes in 2.0.17:
  o Build Changes:
    * Recipes loaded based on the autoLoadRecipe configuration directive
      are now ordered based on the loadedTroves list in the packages
      containing those recipes. (CNY-2694)