@@ -2,6 +2,9 @@ Changes in @NEW@:
   o Code Changes:
     * Dependency checking can now be run without computing the order
       dependency
+    * Added closeDatabase parameter when creating an updateJob to prevent
+      that updateJob from closing the database when it's destroyed. This
+      is a workaround to support CNY-1834
 
   o Bug Fixes:
     * Removed unnecessary repository accesses that were occuring while
